--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
-SpeechRecognition==3.8.1
-pywhatkit==5.4
-python-dotenv==0.19.0
-pygame==2.1.3
-requests==2.26.0
-pycaw==2021.0.2
-comtypes==1.1.10
-pvporcupine==2.1.3
-PyAudio==0.2.11
-numpy==1.21.2
-pydub==0.25.1
-undetected-chromedriver==3.1.5.post1
-selenium==4.0.0
-spotipy==2.19.0
+# - Chrome Driver (for YouTube related stuff)
+# - ffmpeg (for pydub audio processing)
+
+SpeechRecognition
+pywhatkit
+python-dotenv
+pygame
+requests
+pycaw
+comtypes
+pvporcupine
+PyAudio
+numpy
+pydub
+undetected-chromedriver
+selenium
+spotipy
